# mb

./: .clang-format  CMakeLists.txt  error.cpp  error.h  result.h
include/mb/: compile_time.h  core.h  enum.h  error.h  generic.h  int.h  result.h  vector.h  vector2d.h  view.h
src/: core.cpp  error.cpp
tests/: CMakeLists.txt  enum_test.cpp  result_test.cpp  vector_test.cpp  view_test.cpp
